tests/design/errors/lib/false.lib.js


function map(doc){
    emit(doc._id,false);
}

module.exports = {map}